--- a/mobile/presentation/src/main/res/values/strings.xml
+++ b/mobile/presentation/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CarDamageScanner</string>
-    <string name="select_photo">Сделать фото</string>
+    <string name="take_photo">Сделать фото</string>
+    <string name="choose_from_gallery">Выбрать из галереи</string>
 </resources>
