--- a/mobile/presentation/src/main/res/values/strings.xml
+++ b/mobile/presentation/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="welcome_picture">welcome picture</string>
     <string name="start_main_text">Зарегистрируйтесь или зайдите в уже существующий аккаунт</string>
     <string name="next">Далее</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="input_your_number">Введите номер телефона</string>>
+    <string name="button_back">button back</string>
+    <string name="Enter">Вход</string>
 </resources>
