add input code fragment UI

--- a/mobile/presentation/src/main/res/values/strings.xml
+++ b/mobile/presentation/src/main/res/values/strings.xml
@@ -17,5 +17,8 @@
     <string name="mask_on_number">+7 ([000]) [000]-[00]-[00]</string>
     <string name="helper_text_number">Вводите номер в формате +7 (999) 999–99–99</string>
     <string name="empty_string" />
+    <string name="your_code">Ваш код</string>
+    <string name="text_for_code_input">На указанный вами номер <u>%s</u> отправлено SMS с кодом подтверждения. \nВведите его в поле ниже.</string>
+    <string name="input_code_timer">Отправить код повторно можно через %d секунд</string>
 
 </resources>
