--- a/mobile/presentation/src/main/res/values/strings.xml
+++ b/mobile/presentation/src/main/res/values/strings.xml
@@ -23,5 +23,7 @@
     <string name="send_code_again">Отправить код повторно</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="my_reports">Мой отчёты</string>
+    <string name="scan_car">Просканировать автомобиль</string>
 
 </resources>
