--- a/mobile/presentation/src/main/res/values/strings.xml
+++ b/mobile/presentation/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="my_reports">Мои отчёты</string>
     <string name="scan_car">Просканировать автомобиль</string>
+    <string name="logout_button">logout button</string>
 
 </resources>
