create send photos fragment

--- a/mobile/presentation/src/main/res/values/strings.xml
+++ b/mobile/presentation/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="next">Далее</string>
     <string name="input_your_number">Введите номер телефона</string>>
     <string name="button_back">button back</string>
-    <string name="Enter">Вход</string>
+    <string name="Enter">Войти</string>
     <string name="prefix_number">+7 (</string>
     <string name="mask_on_number">+7 ([000]) [000]-[00]-[00]</string>
     <string name="helper_text_number">Вводите номер в формате +7 (999) 999–99–99</string>
@@ -31,5 +31,12 @@
     <string name="back_part_of_car">Задняя часть автомобиля</string>
     <string name="left_part_of_car">Левая часть автомобиля</string>
     <string name="right_part_of_car">Правая часть автомобиля</string>
+    <string name="front_part_of_car_short">Передняя часть</string>
+    <string name="back_part_of_car_short">Задняя часть</string>
+    <string name="left_part_of_car_short">Левая часть</string>
+    <string name="right_part_of_car_short">Правая часть</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_photos_with_nice_rakurs">Добавьте фотографии автомобиля с необходимого ракурса</string>
+    <string name="Send">Отправить</string>
 
 </resources>
